# TransCompiler

./: .gitignore  CMakeLists.txt  README.md
Ptitsa/: Language_Using_Pointers_And_Shit.rar  Ptitsa.cpp  Ptitsa.vcxproj  Ptitsa.vcxproj.filters  Specification.md  Specification.txt  TempPtitsa.cpp  program.pti
Ptitsa/Compiler/: BuildAST.cpp  BuildAST.h  BuildContextTree.cpp  BuildContextTree.h  CreateTypedLexemes.cpp  InterpretTree.cpp  InterpretTree.h  Lexer.cpp  Lexer.h  LexerStructs.cpp  Mistake.cpp  Mistake.h  NewLexer.h  ParseLexemes.cpp  ParseTypedLexemes.cpp  Util.cpp  Util.h
Ptitsa/Language/: Core.cpp  Core.h  Object.cpp  Object.h  ObjectOperators.cpp
